# AI-Power-Blackout-Predictor

./: .env.example  .gitignore  CONTRIBUTING.md  PROJECT_STRUCTURE.md  README.md  docker-compose.demo.yml  docker-compose.yml
.claude/: settings.json
.github/workflows/: ci.yml  docker-publish.yml  sdk-python-publish.yml  sdk-typescript-publish.yml
backend/: alembic.ini  requirements.txt
backend/app/: main.py
backend/grpc/: blackout.proto  server.py
backend/migrations/: env.py
backend/ml_training/: gnn_model.py  train_duration_model.py  train_prophet.py  train_xgboost.py
backend/scripts/: bootstrap_supabase.sql  rls_policies.sql  seed_demo.py
backend/tests/: conftest.py  test_auth.py  test_predictions_api.py  test_sms_inbound.py  test_ussd.py  test_weather_service.py
charts/blackout-predictor/: Chart.yaml  values.yaml
data-pipeline/: Dockerfile  requirements.txt
data-pipeline/collectors/: crowdsource.py  grid_eia.py  grid_entso.py  weather.py
data-pipeline/processors/: aggregator.py  h3_mapper.py  normalizer.py
data-pipeline/schedulers/: cron.py
frontend/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
infrastructure/: docker-compose.prod.yml
infrastructure/nginx/: nginx.conf
infrastructure/postgres/: init.sql
infrastructure/redis/: redis.conf
ml-engine/: Dockerfile  requirements.txt
mobile/: package.json
notebooks/: demo_prediction.ipynb
sdk/python/: pyproject.toml
sdk/python/blackout/: __init__.py  client.py  exceptions.py
sms-gateway/: Dockerfile  requirements.txt
(+336 files in other folders)
