[project]
name = "blackout-predictor-sdk"
version = "0.1.0"
description = "Python SDK for the AI Power Blackout Predictor API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "AI Power Blackout Predictor", email = "info@sicrwanda.com"}]
keywords = ["blackout", "predictor", "power", "outage", "electricity", "api", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/manziosee/AI-Power-Blackout-Predictor"
Repository = "https://github.com/manziosee/AI-Power-Blackout-Predictor"
Documentation = "https://github.com/manziosee/AI-Power-Blackout-Predictor#readme"
"Bug Tracker" = "https://github.com/manziosee/AI-Power-Blackout-Predictor/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["blackout"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
